fixing some style issue & adding scrollbar styles

--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -35,7 +35,6 @@
 		transform: translateX(-50%);
 
 		img {
-			width: 100%;
 			height: 100%;
 		}
 	}
