--- a/frontend/src/style/primary.scss
+++ b/frontend/src/style/primary.scss
@@ -1,6 +1,24 @@
 @import "./generalVariables.scss";
 @import "./fonts.scss";
 
+//scrollbar styling for firefox 66 or higher
+html {
+	scrollbar-color: $roseGoldTrans $primary;
+}
+
+//scrollbar styling for chrome, edge, safari
+html::-webkit-scrollbar {
+	width: 12px;
+}
+
+html::-webkit-scrollbar-track {
+	background: $primary;
+}
+
+html::-webkit-scrollbar-thumb {
+	background: $roseGoldTrans;
+}
+
 body {
 	background-color: $primary;
 }
@@ -172,4 +190,14 @@ a {
 
 .bgSecondary {
 	background-color: $secondary;
+}
+
+.titleSpan {
+	font-family: "Homemade Apple", cursive;
+	letter-spacing: initial;
+	color: $roseGoldTrans;
+	font-size: 38px;
+	position: absolute;
+	transform: translateX(-50%);
+	z-index: -1;
 }
